task/CARE-1351: Fix printed page view of external links on card component (#266)
* Add external link support for print view in card component

* Update external link variable in print view of card component

* updated snapshot

* Refactor helpful links locators to use .first() for improved accuracy

--- a/src/web/CareLeavers.Web/Views/Shared/Grid/Card.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid/Card.cshtml
@@ -37,10 +37,20 @@
                 @Model.Title
             </a>
         </h3>
+
         <p class="govuk-body">@Model.Text</p>
         @if (!string.IsNullOrEmpty(Model.Metadata))
         {
             <p class="govuk-body-s">@Model.Metadata</p>
+        }
+        
+        @if (!string.IsNullOrEmpty(link))
+        {
+            <div class="dfe-card-external-link-print-only">
+                <p class="govuk-body-s govuk-!-margin-top-2">
+                    <a href="@link" class="govuk-link">@link</a>
+                </p>
+            </div>
         }
     </div>
 </div>
