--- a/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
@@ -266,3 +266,13 @@ p
 .govuk-template--rebranded {
   background-color: inherit;
 }
+
+@media print {
+  .dfe-card-link-print-url {
+    display: block;
+    word-break: break-all;
+    margin-top: 1em;
+    font-size: 12pt;
+    color: #505a5f;
+  }
+}
