--- a/src/web/CareLeavers.Web/AssetSrc/scss/print.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/print.scss
@@ -1,5 +1,5 @@
 @media print {
-  
+
   @page {
     size: A4;
     margin: 35px 0;
@@ -21,11 +21,11 @@
       content: var(--siteurl)
     }
   }
-  
-  @page:first {
+
+  @page :first {
     margin: 0 0 35px;
   }
-  
+
   body {
     width: 100%;
   }
@@ -51,13 +51,12 @@
     }
 
     .govuk-header__link--homepage:not(:focus),
-    .govuk-header__link--homepage
-    {
+    .govuk-header__link--homepage {
       background-color: #ffffff;
     }
 
-    .govuk-header__link:not(:focus) .govuk-header__logotype, 
-    .govuk-header__link:focus .govuk-header__logotype{
+    .govuk-header__link:not(:focus) .govuk-header__logotype,
+    .govuk-header__link:focus .govuk-header__logotype {
       content: url(/assets/department-for-education_black.png);
       height: 30px;
     }
@@ -67,7 +66,7 @@
     display: none;
   }
 
-  
+
   .dfe-page-grey {
     padding-top: 1rem !important;
     padding-bottom: 1rem !important;
@@ -155,7 +154,7 @@
   .govuk-heading-m {
     margin-bottom: 0.75rem;
   }
-  
+
   #secondary-content {
     display: none;
   }
@@ -183,25 +182,25 @@
     line-height: 1.5
   }
 
-  .gem-c-contents-list__list,.gem-c-contents-list__nested-list {
+  .gem-c-contents-list__list, .gem-c-contents-list__nested-list {
     color: #000
   }
 
-  .gem-c-contents-list__list,.gem-c-contents-list__nested-list {
+  .gem-c-contents-list__list, .gem-c-contents-list__nested-list {
     font-size: 14pt;
     line-height: 1.2
   }
 
-  .gem-c-contents-list__list,.gem-c-contents-list__nested-list {
+  .gem-c-contents-list__list, .gem-c-contents-list__nested-list {
     padding-left: 0;
     margin-left: 0
   }
 
-  .gem-c-contents-list__list-item--numbered,.gem-c-contents-list__list-item--parent {
+  .gem-c-contents-list__list-item--numbered, .gem-c-contents-list__list-item--parent {
     list-style-type: none
   }
 
-  
+
   .box-icon {
     float: right;
     width: 30%;
@@ -211,7 +210,7 @@
   .box-content {
     width: 100%;
   }
-  
+
   .box-content h3 {
     break-after: avoid-page;
   }
@@ -232,9 +231,9 @@
     display: inline-block;
     margin-left: 0.1rem;
   }
-  
+
   // Hide link for relative URLs (same site) and WhatsApp links
-  [href^="/"].govuk-link::after, [href^="https://wa.me/"].govuk-link::after{
+  [href^="/"].govuk-link::after, [href^="https://wa.me/"].govuk-link::after {
     content: "";
     font-size: inherit;
     word-wrap: inherit;
@@ -247,4 +246,25 @@
   .govuk-template--rebranded {
     background-color: inherit;
   }
+
+  .dfe-card-link--header {
+    color: #000 !important;
+    text-decoration: none !important;
+    pointer-events: none !important; // disables link in print
+    display: inline !important;
+    cursor: default !important;
+  }
+
+
+  .dfe-card-link-print-url {
+    display: block;
+    word-break: break-all;
+    margin-top: 1em;
+    font-size: 12pt;
+    color: #505a5f;
+  }
 }
+
+ 
+
+
