--- a/src/web/CareLeavers.Web/AssetSrc/scss/print.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/print.scss
@@ -248,20 +248,23 @@
   }
 
   .dfe-card-link--header {
-    color: #000 !important;
     text-decoration: none !important;
-    pointer-events: none !important; // disables link in print
-    display: inline !important;
-    cursor: default !important;
   }
-
 
   .dfe-card-link-print-url {
     display: block;
     word-break: break-all;
     margin-top: 1em;
     font-size: 12pt;
-    color: #505a5f;
+    color: #1d70b8;
+    text-decoration: underline !important;
+    font-weight: 500;
+    font-family: inherit;
+  }
+
+  .dfe-card-link--no-url-after::after {
+    content: none !important;
+    display: none !important;
   }
 }
 
