task/CARE-1351-printed-page-external-links Testing Fix
* Add print styles and link display for card component - still displaying title link which we want to hide

* Update print styles for card links and hide URL display

* Regenerate snapshot

--- a/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/application.scss
@@ -679,6 +679,8 @@ html
   font-weight: 700
 }
 
-.dfe-card-external-link-print-only {
+.print-only { display: none; }
+
+.dfe-card-link-print-url {
   display: none;
 }
