--- a/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
@@ -266,3 +266,21 @@ p
 .govuk-template--rebranded {
   background-color: inherit;
 }
+
+@media print {
+  .dfe-card-link-print-url {
+    display: block;
+    word-break: break-all;
+    margin-top: 1em;
+    font-size: 12pt;
+    color: #1d70b8;
+    text-decoration: underline !important;
+    font-weight: 500;
+    font-family: inherit;
+  }
+
+  .dfe-card-link--no-url-after::after {
+    content: none !important;
+    display: none !important;
+  }
+}
