--- a/src/web/CareLeavers.Web/Views/Shared/Grid/Card.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid/Card.cshtml
@@ -29,28 +29,23 @@
 <div class="dfe-card">
     @if (Model.Image != null)
     {
-        <contentful-image asset="@Model.Image" class="full-width-image card-image" alt="" role="presentation"></contentful-image>
+        <contentful-image asset="@Model.Image" class="full-width-image card-image" alt=""
+                          role="presentation"></contentful-image>
     }
     <div class="dfe-card-container">
         <h3 class="govuk-heading-m">
-            <a href="@link" class="govuk-link govuk-link--no-visited-state dfe-card-link--header" rel="@rel">
-                @Model.Title
-            </a>
+         <a href="@link" class="govuk-link govuk-link--no-visited-state dfe-card-link--header dfe-card-link--no-url-after" rel="@rel">
+             @Model.Title
+         </a>
         </h3>
-
         <p class="govuk-body">@Model.Text</p>
         @if (!string.IsNullOrEmpty(Model.Metadata))
         {
             <p class="govuk-body-s">@Model.Metadata</p>
         }
-        
         @if (!string.IsNullOrEmpty(link))
         {
-            <div class="dfe-card-external-link-print-only">
-                <p class="govuk-body-s govuk-!-margin-top-2">
-                    <a href="@link" class="govuk-link">@link</a>
-                </p>
-            </div>
+            <div class="dfe-card-link-print-url govuk-body-s">@link</div>
         }
     </div>
 </div>
