--- a/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
@@ -267,20 +267,30 @@ p
   background-color: inherit;
 }
 
-@media print {
-  .dfe-card-link-print-url {
-    display: block;
-    word-break: break-all;
-    margin-top: 1em;
-    font-size: 12pt;
-    color: #1d70b8;
-    text-decoration: underline !important;
-    font-weight: 500;
-    font-family: inherit;
-  }
+.dfe-card-link-print-url {
+  display: block;
+  word-break: break-all;
+  margin-top: 1em;
+  font-size: 12pt;
+  color: #1d70b8;
+  text-decoration: underline !important;
+  font-weight: 500;
+  font-family: inherit;
+}
 
-  .dfe-card-link--no-url-after::after {
-    content: none !important;
-    display: none !important;
-  }
+.dfe-card-link-print-url::after {
+  content: attr(data-full-url);
+  display: block;
+  word-break: break-all;
+  margin-top: 0.5em;
+  font-size: 12pt;
+  color: #1d70b8;
+  text-decoration: underline !important;
+  font-weight: 500;
+  font-family: inherit;
+}
+
+.dfe-card-link--no-url-after::after {
+  content: none !important;
+  display: none !important;
 }
