Refactor print styles for external link display in printed cards

--- a/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
@@ -267,10 +267,10 @@ p
   background-color: inherit;
 }
 
-.dfe-card-link-print-url {
+.dfe-card-link-print-url,
+.dfe-card-link-print-url::after {
   display: block;
   word-break: break-all;
-  margin-top: 1em;
   font-size: 12pt;
   color: #1d70b8;
   text-decoration: underline !important;
@@ -278,16 +278,13 @@ p
   font-family: inherit;
 }
 
+.dfe-card-link-print-url {
+  margin-top: 1em;
+}
+
 .dfe-card-link-print-url::after {
   content: attr(data-full-url);
-  display: block;
-  word-break: break-all;
   margin-top: 0.5em;
-  font-size: 12pt;
-  color: #1d70b8;
-  text-decoration: underline !important;
-  font-weight: 500;
-  font-family: inherit;
 }
 
 .dfe-card-link--no-url-after::after {
