--- a/src/web/CareLeavers.Web/AssetSrc/scss/print.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/print.scss
@@ -233,11 +233,11 @@
   }
 
   // Hide link for relative URLs (same site) and WhatsApp links
-  [href^="/"].govuk-link::after, [href^="https://wa.me/"].govuk-link::after {
-    content: "";
-    font-size: inherit;
-    word-wrap: inherit;
-  }
+  //[href^="/"].govuk-link::after, [href^="https://wa.me/"].govuk-link::after {
+  //  content: "";
+  //  font-size: inherit;
+  //  word-wrap: inherit;
+  //}
 
   .govuk-template--rebranded .govuk-footer {
     display: none;
@@ -251,10 +251,10 @@
     text-decoration: none !important;
   }
 
-  .dfe-card-link-print-url {
+  .dfe-card-link-print-url,
+  .dfe-card-link-print-url::after {
     display: block;
     word-break: break-all;
-    margin-top: 1em;
     font-size: 12pt;
     color: #1d70b8;
     text-decoration: underline !important;
@@ -262,12 +262,17 @@
     font-family: inherit;
   }
 
+  .dfe-card-link-print-url {
+    margin-top: 1em;
+  }
+
+  .dfe-card-link-print-url::after {
+    content: attr(data-full-url);
+    margin-top: 0.5em;
+  }
+
   .dfe-card-link--no-url-after::after {
     content: none !important;
     display: none !important;
   }
 }
-
- 
-
-
