Refactor printed card styles for external link display to be normal text

--- a/src/web/CareLeavers.Web/Views/Shared/Grid/Card.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/Grid/Card.cshtml
@@ -58,7 +58,7 @@
         }
         @if (!string.IsNullOrEmpty(link))
         {
-            <div class="dfe-card-link-print-url govuk-body-s" data-full-url="@fullUrl"></div>
+            <span class="dfe-card-link-print-url govuk-body-s">@fullUrl</span>
         }
     </div>
 </div>
