--- a/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/collection.scss
@@ -272,9 +272,9 @@ p
   display: block;
   word-break: break-all;
   font-size: 12pt;
-  color: #1d70b8;
-  text-decoration: underline !important;
-  font-weight: 500;
+  color: inherit;
+  text-decoration: none !important;
+  font-weight: 400;
   font-family: inherit;
 }
 
