--- a/src/web/CareLeavers.Web/AssetSrc/scss/print.scss
+++ b/src/web/CareLeavers.Web/AssetSrc/scss/print.scss
@@ -256,9 +256,9 @@
     display: block;
     word-break: break-all;
     font-size: 12pt;
-    color: #1d70b8;
-    text-decoration: underline !important;
-    font-weight: 500;
+    color: inherit;
+    text-decoration: none !important;
+    font-weight: 400;
     font-family: inherit;
   }
 
