CARE-1421 CARE-1665 Added GetToAnAnswer frontend proxy client so translation can be performed on the html
- Added a robust set of playwright automation tests to the Care Leavers project to test the iframe pages render correctly and the questionnaire routing/branching/priorities works, start page (with decorative image) and external links redirecting the whole page. but couldn't test results pages because the care leavers questionnaire flow doesn't include results pages.
- Some of these tests will have to be disables in the pipeline because the care leavers questionnaire flow doesn't have a start page defined via GTAA, etc.

--- a/src/web/CareLeavers.Web/Views/Shared/GetToAnAnswer.cshtml
+++ b/src/web/CareLeavers.Web/Views/Shared/GetToAnAnswer.cshtml
@@ -1,8 +1,8 @@
 @model CareLeavers.Web.Models.Content.GetToAnAnswer
+@inject IHttpContextAccessor HttpContextAccessor;
 
 @{
-    Console.WriteLine(Model.BaseUrl);
-    Console.WriteLine(Model.questionnaireSlug);
+    var languageCode = HttpContextAccessor.HttpContext?.Request.RouteValues["languageCode"]?.ToString();
 }
 
 <div class="gtaa-wrapper"
@@ -12,7 +12,7 @@
      data-fg="#00205b"
      style="margin:0 auto; max-width:100%; width:100%;">
     <iframe id="gtaaFrame" title="@Model.Title"
-            src="@Model.BaseUrl/questionnaires/@Model.questionnaireSlug/start?embed=true"
+            src="/@languageCode/get-to-an-answer-questionnaires/@Model.questionnaireSlug/start"
             allow="autoplay" referrerpolicy="strict-origin" 
             sandbox="allow-scripts allow-top-navigation allow-forms"></iframe>
 </div>
